[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nexuscone"
version = "0.2.0.dev0"
description = "Tamper-evident append-only audit ledger with SHA-256 hash chain, optional Ed25519 signing, and optional Bitcoin anchoring via OpenTimestamps"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Julius (Osi) Abu", email = "osi@aperintel.com" }
]
requires-python = ">=3.10"
keywords = [
    "audit",
    "ledger",
    "tamper-evident",
    "hash-chain",
    "ed25519",
    "opentimestamps",
    "bitcoin",
    "ai-governance",
    "compliance",
    "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "opentimestamps-client>=0.7.1",
    "rfc3161-client>=1.0.0",
]

[project.optional-dependencies]
signing = [
    "cryptography>=42.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/nexuscone/nexuscone"
Repository = "https://github.com/nexuscone/nexuscone"
Issues = "https://github.com/nexuscone/nexuscone/issues"

[project.scripts]
nexuscone-verify = "nexuscone.verifier:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexuscone"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that make real network calls, excluded by default; run with 'pytest -m integration'",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["opentimestamps.*"]
ignore_missing_imports = true
